feat(TCOMP-2395): Upgrade meecrowave to 1.2.15